# Cartographer-Codebase

./: .gitignore  CODEBASE.md  README.md  RECONNAISSANCE.md  pre_submission_test.py  pyproject.toml
.cartography/airflow-dbt-demo-master/.cartography/: CODEBASE.md  architecture_signals.json  cartography_trace.jsonl  fde_dashboard.html  knowledge_graph.json  lineage_graph.json  module_graph.json  onboarding_brief.md  semanticist_analysis.json  state.json
.cartography/jaffle-shop/: architecture_signals.json  knowledge_graph.json  lineage_graph.json  module_graph.json
.cartography/jaffle-shop/.cartography/: CODEBASE.md  architecture_signals.json  cartography_trace.jsonl  fde_dashboard.html  knowledge_graph.json  lineage_graph.json  module_graph.json  onboarding_brief.md  semanticist_analysis.json  state.json
src/: __init__.py  cli.py  orchestrator.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: __init__.py  dag_config_parser.py  dead_code_detector.py  python_dataflow.py  sql_lineage.py  tree_sitter_analyzer.py
src/brownfield_cartographer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/graph/: __init__.py  data_lineage_graph.py  knowledge_graph.py
src/intelligence/: __init__.py  importance_engine.py
src/models/: edges.py  graph_types.py  nodes.py
src/utils/: __init__.py  deterministic_semantics.py  file_utils.py  git_utils.py  graph_cache.py  llm_router.py  logging_utils.py  semantic_index.py  semantic_prompts.py  state_utils.py  token_budget.py  trace_logger.py  visualization.py
tests/: conftest.py  test_analyzers.py  test_lineage_agents.py  test_semanticist_deadcode.py
