[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Brownfield Cartographer: architecture intelligence for unfamiliar production repositories"
authors = [{ name = "Eyor Getachew" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.8.0",
    "sqlglot>=23.0.0",
    "networkx>=3.2.1",
    "pydantic>=2.6.0",
    "gitpython>=3.1.43",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.2",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "PyYAML>=6.0.1",
    "pytest>=7.4.3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.3.0",
    "pandas>=2.3.3",
    "pyspark>=4.1.1",
    "requests>=2.32.5",
    "google-genai>=1.67.0",
    "plotly>=6.6.0",
    "pyvis>=0.3.2",
]

[project.scripts]
cartographer = "src.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
